--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,21 @@ form button:hover{
   color:white;
 
 }
+
+.todo-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list{
+  min-width: 30%;
+  list-style: none;
+}
+
+.todo{
+  margin:0.5rem;
+  background:white;
+  color:black;
+  font-size:1.2rem;
+}
