--- a/css/style.css
+++ b/css/style.css
@@ -60,4 +60,37 @@ form button:hover{
   background:white;
   color:black;
   font-size:1.2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.todo li{
+  flex:1;
+}
+
+.completed-btn, .trash-btn{
+  background: #e63946;
+  color: white;
+  border:none;
+  padding: 1rem;
+  cursor:pointer;
+  font-size: 1rem;
+}
+.completed-btn{
+  background:#06d6a0;
+}
+
+.todo-item{
+  padding:0 0.5rem;
+}
+
+.fa-check-square, .fa-trash-alt{
+  pointer-events: none;
+
+}
+
+.completed{
+  text-decoration: line-through;
+  opacity:0.5;
 }
