--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ form button:hover{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: all 0.5s ease;
 }
 
 .todo li{
@@ -93,4 +94,9 @@ form button:hover{
 .completed{
   text-decoration: line-through;
   opacity:0.5;
+}
+
+.fall{
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
 }
