--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,35 @@ form button:hover{
   transform: translateY(8rem) rotateZ(20deg);
   opacity: 0;
 }
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none
+  outline: none;
+  border:  none;
+}
+
+.select{
+  margin: 1rem;
+  position:relative;
+  overflow: hidden;
+}
+
+select{
+  color:#e63946;
+  width: 10rem;
+  cursor: pointer;
+  padding:1rem;
+}
+
+.select::after{
+  content:"\25BC";
+  position: absolute;
+  background:#e63946;
+  top:0;
+  right:0;
+  padding:1rem;
+  pointer-events: none;
+
+}
